# rust-blog-with-login

./: .env  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: main.yml
migrations/2022-02-07-205821_create_users/: up.sql
migrations/2022-03-29-200305_change_id/: up.sql
migrations/2022-04-18-181621_create_posts/: up.sql
src/: main.rs  schema.rs
src/models/: mod.rs  posts.rs  users.rs
src/views/: mod.rs  posts.rs  users.rs
